# Strata-Ground-Robot

./: .gitmodules  README.md
Arduino/Servo_control/: Servo_control.ino
Arduino/Servo_control_from_py/: Servo_control_from_py.ino
Platform/Arduino/Servo_control/: Servo_control.ino
Platform/Arduino/Servo_control_from_py/: Servo_control_from_py.ino
Platform/Arduino/i2C_to_PWM/: i2C_to_PWM.ino
Platform/C/: control.cpp
Platform/Python/: control.py  main.py  ramp_platform_off_data.mat  serial_test.py  servo_sweep.py  test_controller.py
Python/: control.py  float_test.py  main.py  parse_test.py  serial_test.py  servo_sweep.py  test_controller.py  tools.py
Robot/Arduino/key_control_prototype/: key_control_prototype.ino
Robot/C/vicon_host/src/: main.cpp
Robot/MATLAB/: depthToPointCloudPos.m  depth_grid_test.asv  depth_grid_test.m  point_cloud_test.m
Robot/kinect_test/: kinect.py  kinect2path.py  raw_depth.py
Robot/vicon_client_test/: CMakeLists.txt
Robot/vicon_host/: CMakeLists.txt  robot_SEH.cfg
Robot/vicon_host/include/: fdcl_common_type.h  fdcl_param.h  fdcl_robot.h  fdcl_vicon.h  main.h  misc_matrix_func.h
Robot/vicon_host/libraries/eigen/: .gitignore  README.md
Robot/vicon_host/libraries/vrpn/: README.md
Robot/vicon_host/libraries/vrpn/client_src/: Makefile  logfilesenders  logfiletypes
Robot/vicon_host/libraries/vrpn/client_src/pc_linux64/: add_vrpn_cookie  bdbox_client  c_interface_example  checklogfile  ff_client  forcedevice_test_client  forwarderClient  printvals  sphere_client  test_imager  test_mutex  text  vrpn_print_devices
Robot/vicon_host/libraries/vrpn/quat/: Makefile
Robot/vicon_host/libraries/vrpn/server_src/: Makefile
Robot/vicon_host/libraries/vrpn/server_src/pc_linux64/: client_and_server  test_analogfly  test_logging  test_peerMutex  test_radamec_spi  test_vrpn  testimager_server  vrpn_server  wiimote_head_tracker
Robot/vicon_host/src/: .m.swp  fdcl_param.cpp  fdcl_robot.cpp  fdcl_vicon.cpp  main.cpp  misc_matrix_func.cpp
(+60 files in other folders)
